redis_demo/redis_toy_app/Kubernetes/network_policies/redis-from-namespace-networkpolicy.yaml
# ALLOW all traffic from a matched namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-from-namespace
  namespace: test-redis
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: test-redis
